--- a/style shet.css
+++ b/style shet.css
@@ -1,5 +1,19 @@
-.hero5_img{
-    background-image: url(hero5_img.jpg);
+.hero_img{
+    background-image: url(hero_img.jpg);
     background-size: cover;
     height: 100vh;
+    position: relative;
+    
+}
+h1{
+    color:chartreuse;
+    font-size: large;
+  
+}
+.hero_wrapper{
+    color:whitesmoke;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50% -50%);
 }
