--- a/style shet.css
+++ b/style shet.css
@@ -8,7 +8,11 @@
 h1{
     color:chartreuse;
     font-size: large;
+    text-align: center;
   
+}
+p{
+    text-align: justify;
 }
 .hero_wrapper{
     color:whitesmoke;
@@ -18,5 +22,27 @@ h1{
     transform: translate(-50% -50%);
 }
 .style{
+    text-align: center;
+}
+ .style .form{
+    display: block;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 2rem;
+    padding: .6rem;
+    border: none;
+    outline: none;
 
+
+}
+button{
+   width: 40%;
+   text-align: center; 
+   background-color: aquamarine;
+   color: #000;
+   padding: .6rem;
+   margin: 1rem auto 0rem;
+   border: none;
+   border-radius: .3rem;
 }
