--- a/style shet.css
+++ b/style shet.css
@@ -13,13 +13,18 @@ h1{
 }
 p{
     text-align: justify;
+    right: 25%;
+    left: 25%;
+    padding: 5%;
 }
 .hero_wrapper{
     color:whitesmoke;
     position: absolute;
-    top: 50%;
-    left: 50%;
+   
+    
     transform: translate(-50% -50%);
+    text-align: center;
+    top: 25%;
 }
 .style{
     text-align: center;
